force-app/main/default/objects/Account/fields/Sum_of_closed_opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_closed_opportunity_Amount__c</fullName>
    <label>Sum of closed opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>