force-app/main/default/objects/Account/fields/Sum_of_open_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_open_opportunity__c</fullName>
    <label>Sum of open opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>